folder structure changed

--- a/pokemon_exploration.ipynb
+++ b/pokemon_exploration.ipynb
@@ -34,6 +34,8 @@
     "\n",
     "Got this set from https://www.kaggle.com/abcsds/pokemon\n",
     "\n",
+    "Got the swarmplot idea from https://www.kaggle.com/ndrewgele/visualizing-pok-mon-stats-with-seaborn\n",
+    "\n",
     "Have a look:"
    ]
   },
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
