--- a/pokemon_exploration.ipynb
+++ b/pokemon_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -14,15 +14,6 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(\"./Pokemon.csv\")"
    ]
   },
   {
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +76,7 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Bulbasaur</td>\n",
-       "      <td>Grass</td>\n",
+       "      <td>Bug</td>\n",
        "      <td>Poison</td>\n",
        "      <td>318</td>\n",
        "      <td>45</td>\n",
@@ -101,7 +92,7 @@
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Ivysaur</td>\n",
-       "      <td>Grass</td>\n",
+       "      <td>Bug</td>\n",
        "      <td>Poison</td>\n",
        "      <td>405</td>\n",
        "      <td>60</td>\n",
@@ -117,7 +108,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Venusaur</td>\n",
-       "      <td>Grass</td>\n",
+       "      <td>Bug</td>\n",
        "      <td>Poison</td>\n",
        "      <td>525</td>\n",
        "      <td>80</td>\n",
@@ -133,7 +124,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>VenusaurMega Venusaur</td>\n",
-       "      <td>Grass</td>\n",
+       "      <td>Bug</td>\n",
        "      <td>Poison</td>\n",
        "      <td>625</td>\n",
        "      <td>80</td>\n",
@@ -149,7 +140,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Charmander</td>\n",
-       "      <td>Fire</td>\n",
+       "      <td>Bug</td>\n",
        "      <td>NaN</td>\n",
        "      <td>309</td>\n",
        "      <td>39</td>\n",
@@ -167,11 +158,11 @@
       ],
       "text/plain": [
        "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
-       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
-       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
-       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
-       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "0  1              Bulbasaur    Bug  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur    Bug  Poison    405  60      62       63   \n",
+       "2  3               Venusaur    Bug  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur    Bug  Poison    625  80     100      123   \n",
+       "4  4             Charmander    Bug     NaN    309  39      52       43   \n",
        "\n",
        "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
        "0       65       65     45           1      False  \n",
@@ -181,33 +172,13 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['distributions.svg', 'example_heatmap.svg', 'example_swarmplot.svg']"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir(\"figures/\")"
    ]
   },
   {
@@ -224,6 +195,20 @@
     "    <td><img src='figures/example_swarmplot.svg' /></td>\n",
     "</tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hints:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "use `seaborn.distplot, seaborn.swarmplot, seaborn.heatmap`... for the swarmplot, you maybe need `pandas.melt`, its a reshape routine similar to the one in `reshape2` in R."
    ]
   },
   {
@@ -553,6 +538,13 @@
    "source": [
     "numerical_cols.remove(\"Generation\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
