put helpers to separate file, wip stuff

--- a/pydatabln_2018_schedule2cal/write2cal.ipynb
+++ b/pydatabln_2018_schedule2cal/write2cal.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "# Authenticate\n",
-    "Disclaimer: This is really ugly and often fails. Try to get it running, as the apiclient has got the service (this is the hard part), everything should work.\n",
+    "another Disclaimer: This is really ugly and often fails. Try to get it running, as the apiclient has got the service (this is the hard part), everything should work.\n",
     "\n",
     "WARNING: oauth2client is outdated and no longer maintained. I still use it but you shouldn't. Unfortunately the [calendar quickstart documentation](https://developers.google.com/calendar/quickstart/python?authuser=1) uses it, so one has to put own effort in using more modern tools.\n",
     "\n",
@@ -88,8 +88,8 @@
     "credential_dir = os.path.join(home_dir, '.credentials')\n",
     "if not os.path.exists(credential_dir):\n",
     "    os.makedirs(credential_dir)\n",
-    "credential_path = os.path.join(credential_dir,\n",
-    "                               'calendar-python-quickstart.json')\n",
+    "credential_path = os.path.join(\n",
+    "    credential_dir, 'calendar-python-quickstart.json')\n",
     "\n",
     "store = Storage(credential_path)\n",
     "credentials = store.get()\n",
@@ -141,87 +141,23 @@
     "\n",
     "This is not a bug, it's an possibility to improve ;-)\n",
     "\n",
-    "Mainly, this section contains of some convenience helpers and two important functions:\n",
+    "Mainly, the helper file contains some convenience helpers and two important functions:\n",
     "- `create_pydata_calendars` (this creates the calendars if there is none with the same summary)\n",
     "- `write_event` (this creates the event if there is none with same time and summary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-08T07:55:07.652722Z",
-     "start_time": "2018-07-08T07:55:07.594719Z"
+     "end_time": "2018-07-10T06:57:30.142621Z",
+     "start_time": "2018-07-10T06:57:30.137260Z"
     }
    },
    "outputs": [],
    "source": [
-    "def get_cals(service, filter_list=False):\n",
-    "    \"\"\"Get Calendar Items from API.\"\"\"\n",
-    "    cals = service.calendarList().list().execute().get('items')\n",
-    "    if filter_list and isinstance(filter_list, list):\n",
-    "        cals = filter(lambda d: d['summary'] in filter_list, cals)\n",
-    "    return cals\n",
-    "\n",
-    "\n",
-    "def create_pydata_calendars(service,\n",
-    "                            calendar_list=[\n",
-    "                                'pydata_novice',\n",
-    "                                'pydata_intermediate',\n",
-    "                                'pydata_experienced']):\n",
-    "    \"\"\"Create Calendars named as `calendar_list`.\"\"\"\n",
-    "    cals = get_cals(service)\n",
-    "    new_cals = {}\n",
-    "    for summary in calendar_list:\n",
-    "        if summary in map(lambda d: d['summary'], cals):\n",
-    "            continue\n",
-    "        calendar = {'summary': summary, 'timeZone': 'Europe/Berlin'}\n",
-    "\n",
-    "        created_calendar = service.calendars().insert(body=calendar).execute()\n",
-    "        new_cals[summary] = created_calendar['id']\n",
-    "    return new_cals\n",
-    "\n",
-    "\n",
-    "def reduce_to_summary(cals, is_dict=False):\n",
-    "    \"\"\"Reduce calendar json for summarys or dict of summary:id pairs.\"\"\"\n",
-    "    if is_dict:\n",
-    "        return {x['summary']: x['id'] for x in cals}\n",
-    "    else:\n",
-    "        return map(lambda d: d['summary'], cals)\n",
-    "\n",
-    "\n",
-    "def write_event(event, cals, service):\n",
-    "    \"\"\"Write an event (pd.Series, row of df) to calendar.\"\"\"\n",
-    "    events = service.events()\n",
-    "    CalID = filter(lambda d: event.level == d['summary'], cals)[0]['id']\n",
-    "    l = (\n",
-    "        events.list(\n",
-    "            calendarId=CalID,\n",
-    "            timeMin=event.start + '+02:00',\n",
-    "            timeMax=event.end + '+02:00',\n",
-    "            singleEvents=True).execute()['items']\n",
-    "    )\n",
-    "    if (len(l) != 0) and any(map(lambda d: d['summary'] == event.summary, l)):\n",
-    "        print(\"found existing event(s): '{}'\".format(\n",
-    "            \"', '\".join(map(lambda d: d['summary'], l))))\n",
-    "        return False\n",
-    "    else:\n",
-    "        print('creating event {}'.format(event.summary))\n",
-    "\n",
-    "    event = {\n",
-    "        'summary': event.summary,\n",
-    "        'location': event.location,\n",
-    "        'description': event.description,\n",
-    "        'start': {'dateTime': event.start, 'timeZone': 'Europe/Berlin'},\n",
-    "        'end': {'dateTime': event.end, 'timeZone': 'Europe/Berlin'},\n",
-    "        # 'organizer': [{'displayName': event.attendees}],  # didn't work\n",
-    "        'reminders': {'useDefault': False}\n",
-    "        # 'attendees': [{'email': 'YOUR@MAIL.com', 'sendNotifications': False}]\n",
-    "    }\n",
-    "\n",
-    "    event = events.insert(calendarId=CalID, body=event).execute()\n",
-    "    return True"
+    "from helpers import *"
    ]
   },
   {
@@ -551,13 +487,6 @@
     "for (_, event) in df.iterrows():\n",
     "    write_event(event, cals, service)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -606,7 +535,7 @@
     "width": "358px"
    },
    "toc_section_display": "block",
-   "toc_window_display": true,
+   "toc_window_display": false,
    "widenNotebook": false
   }
  },
